--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,212 +1,574 @@
-body {
+:root {
+  --background-color-values: 40, 40, 45;
+  --background-color: rgb(var(--background-color-values));
+  --background-gradient-values: transparent,
+    rgba(var(--background-color-values), 0.8), var(--background-color);
+  --border-radius: 0.75em;
+  --box-shadow: #0009 0 0 0.5em;
+  --indent: 1em;
+  --root-background-color: #19191e;
+}
+
+html,
+body,
+#root {
+  height: 100vh;
   margin: 0;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
+  background-color: var(--root-background-color);
+}
+
+* {
+  box-sizing: border-box;
 }
 
 #root {
-  background-color: #2c2e31;
-  color: #d1d0c5;
+  color: #c8c8be;
   font-family: sans-serif;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  justify-content: center;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-items: start;
+  gap: 1em;
+  margin-bottom: 1em;
+}
+
+.menu {
+  flex: 1;
+}
+
+.hidden,
+.hiddable {
+  transition: 0.5s;
+}
+
+.word-count.hidden {
+  height: 0;
+  overflow: hidden;
+}
+
+.history-container::after,
+.history-container::before {
+  content: "";
+  position: absolute;
+  z-index: 2;
+}
+
+@media (max-width: 120vh) {
+  /* portrait */
+  nav.hidden {
+    margin-top: -3em;
+  }
+
+  .menu.hidden {
+    margin-top: -5em;
+  }
+
+  .main,
+  .history {
+    flex-direction: column;
+  }
+
+  .main {
+    max-height: calc(100vh - 6em);
+    transition: 0.5s;
+  }
+
+  :has(.menu.hidden) ~ .main {
+    max-height: calc(100vh - 5em);
+  }
+
+  :has(.menu.hidden).hidden ~ .main {
+    max-height: calc(100vh - 2em);
+  }
+
+  .history-container::after,
+  .history-container::before {
+    height: 1em;
+    width: 100%;
+  }
+
+  .history-container::after {
+    background: linear-gradient(
+      to bottom,
+      transparent,
+      var(--root-background-color)
+    );
+    bottom: 0;
+  }
+
+  .history-container::before {
+    background: linear-gradient(
+      to top,
+      transparent,
+      var(--root-background-color)
+    );
+  }
+
+  .history {
+    max-height: 100%;
+  }
+
+  .history-container {
+    max-height: calc(100vh - 12em);
+  }
+
+  .history-container.hidden {
+    max-height: 0;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 120vh) {
+  /* landscape */
+  nav {
+    flex-direction: column;
+  }
+
+  #root {
+    flex-direction: row;
+  }
+
+  nav.hidden {
+    margin-left: -3em;
+  }
+
+  .menu.hidden {
+    margin-left: -13em;
+  }
+
+  .history-container::after,
+  .history-container::before {
+    width: 1em;
+    height: 100%;
+  }
+
+  .history-container::after {
+    background: linear-gradient(
+      to right,
+      transparent,
+      var(--root-background-color)
+    );
+    right: 0;
+    top: 0;
+  }
+
+  .history-container::before {
+    background: linear-gradient(
+      to left,
+      transparent,
+      var(--root-background-color)
+    );
+  }
+
+  .history-item {
+    max-width: 15em;
+  }
+}
+
+.word-count {
+  color: #808080;
+}
+
+.word-count.overflow {
+  color: #9d3939;
+}
+
+.main .button.hidden,
+.loader.hidden {
+  visibility: hidden;
+  width: 0;
+}
+
+.input,
+.display {
+  min-height: 3.5em;
+  word-break: break-all;
+  overflow-y: auto;
+  overflow-x: hidden;
+  border-radius: 1em;
+  padding: 1em;
+  position: relative;
+}
+
+.text-container {
+  max-height: calc(100% - 3em);
+}
+
+.text-container * {
+  max-height: 100%;
+}
+
+.text-container > .background::after,
+.text-container > .background::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 1em;
+  width: 100%;
+  z-index: 1;
+}
+
+.text-container {
+  gap: 0.2em;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 5vh 5vw 5vh 5vw;
-  min-height: 90vh;
-  color: #d1d0c5;
 }
 
-
-
-#main {
-  padding-top: 5vh;
+.text-container > .background::after {
+  bottom: calc(2em - 3px);
+  background: linear-gradient(to bottom, var(--background-gradient-values));
 }
 
-#menu {
+.text-container > .background::before {
+  top: calc(2em - 3px);
+  background: linear-gradient(to top, var(--background-gradient-values));
+}
+
+.text-container > .background {
+  display: flex;
+  padding: 2em 4em;
+  position: relative;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.mode {
+  height: 2em;
+  margin-top: 1em;
+}
+
+.mode.hidden {
+  height: 0;
+  opacity: 0;
   margin-top: 0;
 }
 
-#input,
-#display {
-  padding: 1em;
-  border: 1px solid gray;
-  border-radius: 0.75em;
-  max-width: 90vw;
-  min-width: min(20em, 90vw);
-  word-break: break-all;
-}
-
-#input:empty, #display:empty {
-  cursor: text;
-}
-
-#display {
+.display {
   cursor: default;
 }
 
-#input {
-  outline: 0px solid transparent;
-}
-
-#input:empty:before,
-#display:empty:before {
-  content: "Type japanese text here";
-  color: #646669;
-}
-
-.unit {
-  position: relative;
-}
-
-.tooltip {
-  min-width: 15px;
-  background-color: rgb(39, 39, 39);
-  border-radius: 6px;
-  padding: 5px;
-  text-align: center;
-
-  visibility: hidden;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  transform: translateX(-50%);
-  border: 1px solid white;
-
-  display: flex;
-  flex-direction: column;
-  text-wrap: wrap;
-  white-space: nowrap;
-  text-align: center;
-}
-
-.unit:hover>.tooltip {
-  visibility: visible;
+.input {
+  outline: 0 solid transparent;
 }
 
 .unit-text {
-  border-radius: 4px;
+  text-align: center;
 }
 
-
-.unit-text:hover {
-  background-color: rgb(96, 96, 96);
-  color: white;
+.tooltip-container {
+  position: relative;
 }
 
-.tooltipimg {
-  border-radius: 10px;
-  width: 100px;
-  height: 100px;
-  filter: contrast(1.5);
-}
-
-
-.tooltip::before,
-.tooltip::after {
-  content: "";
-  position: absolute;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  top: 100%;
-  left: 50%;
-  margin-left: -10px;
-}
-
-.tooltip::before {
-  border-top: 10px solid rgb(200, 200, 200);
-}
-
-/* The white fill of the triangle */
-.tooltip::after {
-  border-top: 10px solid rgb(39, 39, 39);
-  margin-top: -1px;
-  z-index: 1;
-}
-
-#side-menu {
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  justify-content: flex-end;
-}
-
-.conversion,
-.sum {
+.tooltip > * {
   text-wrap: nowrap;
 }
 
+.show-tooltip > .unit-text {
+  border-radius: 0.25em;
+  background-color: #fff3;
+}
 
-/* checkbox */
+.display > span {
+  white-space: pre-wrap;
+}
 
-.checkbox-wrapper-2 {
+.unit:hover {
+  cursor: pointer;
+}
+
+.tooltip {
+  visibility: hidden;
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 2px;
+  min-width: 1.5em;
   display: flex;
-  align-items: end;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
+  opacity: 0;
+  min-height: 5em;
+}
+
+.unit .tooltip {
+  bottom: 125%;
+}
+
+.show-tooltip > .tooltip {
+  transition: 0.5s;
+  opacity: 1;
+  visibility: visible;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  :not(.unit):hover > .tooltip {
+    transition-delay: 1s;
+  }
+
+  :hover > .tooltip {
+    transition: 0.5s;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .button:hover {
+    scale: 1.1;
+  }
+
+  .button:active {
+    filter: brightness(110%);
+  }
+
+  .main ::-webkit-scrollbar-thumb:hover {
+    background-color: #ffffff40;
+    cursor: grab;
+  }
+
+  .unit:hover > .unit-text {
+    border-radius: 0.25em;
+    background-color: #fff3;
+  }
+}
+
+.tooltip::after {
+  content: "";
+  position: absolute;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  top: 100%;
+  left: 50%;
+  margin-left: -12px;
+  border-top: 10px solid var(--background-color);
+  margin-top: -3px;
+  padding-bottom: 10px;
+  filter: drop-shadow(#00000566 0 4px 5px);
+  z-index: 1;
+}
+
+.tooltip img {
+  border-radius: 1em;
+  width: 6em;
+}
+
+.background {
+  background-color: var(--background-color);
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
+  padding: var(--indent);
+}
+
+.button {
+  width: 2em;
+  height: 2em;
+  cursor: pointer;
+  opacity: 70%;
+}
+
+.button:active,
+.unit:active {
+  filter: brightness(120%);
+}
+
+.button,
+.button:hover,
+.button:active {
+  transition: 0.3s;
+}
+
+select {
+  border-radius: 0.5em;
+  font: inherit;
+  color: inherit;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  margin-left: 0.1em;
+  cursor: pointer;
+}
+
+.select-item {
+  background-color: gray;
+  color: #fff;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.text-container ::-webkit-scrollbar {
+  width: 2em;
+}
+
+.text-container ::-webkit-scrollbar-thumb {
+  background-color: #ffffff1a;
+  border: 0.75em solid transparent;
+  border-radius: 1em;
+  background-clip: padding-box;
+}
+
+.text-container ::-webkit-scrollbar-thumb:active {
+  background-color: #ffffff80;
+  cursor: grabbing;
+}
+
+.text-container ::-webkit-scrollbar-track-piece {
+  margin: 0.2em;
+}
+
+.blur :not(.loader) {
+  filter: blur(0.1em);
+}
+
+.loader {
+  position: absolute;
+  width: 3em;
+  aspect-ratio: 1;
+  margin-bottom: 50%;
+  left: calc(50% - 1.5em);
+  animation: loader-animation 2s infinite ease-in-out;
+  z-index: 1;
+}
+
+@keyframes loader-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.input:empty::before {
+  content: "Type japanese text here";
+  color: #ffffff80;
+  cursor: text;
+}
+
+.hiragana {
+  color: #ff9696;
+}
+
+.katakana {
+  color: #9696ff;
+}
+
+.kanji {
+  color: #96ff96;
+}
+
+.interjection {
+  color: #e175ff;
+}
+
+.conjunction {
+  color: #afaf71;
+}
+
+.preposition {
+  color: #3bffb4;
+}
+
+.particle {
+  color: #6e742e;
+}
+
+.auxiliary.verb {
+  color: #467246;
+}
+
+.verb {
+  color: #6ab0c9;
+}
+
+.adverb {
+  color: #9582c4;
+}
+
+.adjective {
+  color: #cc8299;
+}
+
+.noun {
+  color: #fcac5d;
+}
+
+.pronoun {
+  color: #fff23d;
+}
+
+.history {
+  display: flex;
   gap: 0.5em;
+  overflow: scroll;
+  font-size: 0.7em;
 }
 
-.checkbox-wrapper-2 .ikxBAC {
-  appearance: none;
-  background-color: #dfe1e4;
-  border-radius: 72px;
-  border-style: none;
-  flex-shrink: 0;
-  height: 20px;
-  margin: 0;
+.history-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.history-container {
   position: relative;
-  width: 30px;
 }
 
-.checkbox-wrapper-2 .ikxBAC::before {
-  bottom: -6px;
+.history-item .button {
+  width: 1em;
+  height: 1em;
+}
+
+.history-item-bottom {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5em;
+  text-wrap: nowrap;
+}
+
+.history-date {
+  color: gray;
+}
+
+.history-text,
+.history-text * {
+  cursor: pointer;
+  overflow: hidden;
+  flex: 1;
+  white-space: pre-wrap;
+  height: 4.5em;
+}
+.history-item * {
+  position: relative;
+}
+
+.history-text::after {
   content: "";
-  left: -6px;
   position: absolute;
-  right: -6px;
-  top: -6px;
-}
-
-.checkbox-wrapper-2 .ikxBAC,
-.checkbox-wrapper-2 .ikxBAC::after {
-  transition: all 100ms ease-out;
-}
-
-.checkbox-wrapper-2 .ikxBAC::after {
-  background-color: #515151;
-  border-radius: 50%;
-  content: "";
-  height: 14px;
-  left: 3px;
-  position: absolute;
-  top: 3px;
-  width: 14px;
-}
-
-.checkbox-wrapper-2 input[type=checkbox] {
-  cursor: default;
-}
-
-.checkbox-wrapper-2 .ikxBAC:hover {
-  background-color: #c9cbcd;
-  transition-duration: 0s;
-}
-
-.checkbox-wrapper-2 .ikxBAC:checked {
-  background-color: #6e79d6;
-}
-
-.checkbox-wrapper-2 .ikxBAC:checked::after {
-  background-color: #c9cbcd;
-  left: 13px;
-}
-
-.checkbox-wrapper-2 :focus:not(.focus-visible) {
-  outline: 0;
-}
-
-.checkbox-wrapper-2 .ikxBAC:checked:hover {
-  background-color: #535db3;
+  left: 0;
+  bottom: 0;
+  height: 1em;
+  width: 100%;
+  z-index: 1;
+  background: linear-gradient(to bottom, var(--background-gradient-values));
 }
