fix tooltip positioning

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,7 +119,6 @@ nav:has(.settings.hidden ~ .mode.hidden) {
   margin-bottom: -3em;
 }
 
-
 .settings.hidden {
   margin-left: -50%;
   width: 0;
@@ -290,11 +289,6 @@ nav:has(.settings.hidden ~ .mode.hidden) {
   max-height: 100%;
   overflow: hidden;
 }
-.history-item.hidden {
-  max-height: 0;
-  padding: 0;
-  margin: 0;
-}
 
 .mode {
   height: 2em;
@@ -310,19 +304,7 @@ nav:has(.settings.hidden ~ .mode.hidden) {
 
 .unit-text {
   text-align: center;
-}
-
-.tooltip-container {
-  position: relative;
-}
-
-.tooltip > * {
-  text-wrap: nowrap;
-}
-
-.show-tooltip > .unit-text {
-  border-radius: 0.25em;
-  background-color: #fff3;
+  display: inline-block;
 }
 
 .display > span {
@@ -333,39 +315,7 @@ nav:has(.settings.hidden ~ .mode.hidden) {
   cursor: pointer;
 }
 
-.tooltip.background {
-  visibility: hidden;
-  position: absolute;
-  bottom: 125%;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-bottom: 2px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 2;
-  opacity: 0;
-  border-radius: 1em;
-  padding: 1em;
-}
-
-.show-tooltip > .tooltip {
-  transition: 0.5s;
-  opacity: 1;
-  visibility: visible;
-}
-
 @media (hover: hover) and (pointer: fine) {
-  :not(.unit):hover > .tooltip {
-    transition-delay: 1s;
-  }
-
-  :hover > .tooltip {
-    transition: 0.5s;
-    opacity: 1;
-    visibility: visible;
-  }
-
   .button:hover {
     scale: 1.1;
   }
@@ -383,26 +333,6 @@ nav:has(.settings.hidden ~ .mode.hidden) {
     border-radius: 0.25em;
     background-color: #fff3;
   }
-}
-
-.tooltip::after {
-  content: "";
-  position: absolute;
-  border-left: 12px solid transparent;
-  border-right: 12px solid transparent;
-  top: 100%;
-  left: 50%;
-  margin-left: -12px;
-  border-top: 10px solid var(--background-color);
-  margin-top: -3px;
-  padding-bottom: 10px;
-  filter: drop-shadow(#00000566 0 4px 5px);
-  z-index: 1;
-}
-
-.tooltip img {
-  border-radius: 1em;
-  width: 6em;
 }
 
 .background {
@@ -586,11 +516,23 @@ nav:has(.settings.hidden ~ .mode.hidden) {
   flex: 1;
   white-space: pre-wrap;
   max-height: 4.5em;
-  min-height: 2em;
+  min-height: 3em;
+}
+
+.history-item {
+  min-height: 8em;
 }
 
 .history-item * {
   position: relative;
+}
+
+.history-item.hidden {
+  max-height: 0;
+  height: 0;
+  min-height: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .history-text::after {
@@ -668,4 +610,53 @@ nav:has(.settings.hidden ~ .mode.hidden) {
 
 * {
   scrollbar-width: none;
+}
+
+.unit-text.highlight {
+  background-color: rgba(255, 255, 255, 0.202);
+  border-radius: 0.3em;
+}
+
+.tooltip img {
+  width: 6em;
+}
+
+.tooltip.shown,
+.tooltip.hidden {
+  transition: 0;
+  transition: opacity 0.5s;
+}
+
+.tooltip {
+  color: #c8c8be;
+  position: absolute;
+  white-space: nowrap;
+  pointer-events: none;
+
+  margin-bottom: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1em;
+  padding: 1em;
+  pointer-events: auto;
+  cursor: default;
+}
+
+.tooltip::after {
+  content: "";
+  position: absolute;
+  border-left: 1.5em solid transparent;
+  border-right: 1.5em solid transparent;
+  top: var(--top);
+  bottom: var(--bottom);
+  transform: scaleY(var(--scale));
+  left: 50%;
+  margin-left: -1.5em;
+  border-top: 0.5em solid var(--background-color);
+  filter: drop-shadow(#00000566 0 4px 5px);
+}
+
+.tooltip.hidden {
+  opacity: 0;
 }
